tests/cases/compiler-development/artifact/errors/diagnostic-match-wrong-enum-case.diagnostic
diagnostic error code=T0001 family=type message="enum case 'B' does not belong to Left" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/match/errors/match-wrong-enum-case.ari" display="tests/cases/match/errors/match-wrong-enum-case.ari" bytes=165
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-wrong-enum-case.ari" line=12 column=5 end_line=12 end_column=6 byte_start=97 byte_end=98 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-wrong-enum-case.ari:12:5\n    |\n 12 |     B => {\n    |     ^"
